Added methods for obtaining results